# aito-erp-demo

./: .env.example  .gitignore  CLAUDE.md  README.md  do  pyproject.toml  shell.nix
.github/workflows/: ci.yml
assets/: teaser.html
data/: generate_fixtures.py  generate_personas.py  generate_projects.py
data/coldstart/: results.json
docs/: aito-cheatsheet.md  cold-start.md  data-model.md  data-upload-guide.md  demo-script.md  scaling.md  security.md
docs/adr/: 0001-hybrid-rules-aito-routing.md  0002-prediction-explanation-pattern-c.md  0003-sentinel-tag-highlights.md  0004-three-state-smartfield.md  README.md
docs/notes/: aito-perf-findings.md
docs/product-sheet/: product-sheet.typ
docs/use-cases/: 01-po-queue.md  02-smart-entry.md  03-approval-routing.md  04-anomaly-detection.md  05-supplier-intel.md  06-rule-mining.md  07-catalog-intelligence.md  README.md  (+9 more)
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
scripts/: capture_coldstart.py
src/: aito_client.py  anomaly_service.py  app.py  approval_service.py  cache.py  catalog_service.py  config.py  data_loader.py  demand_service.py  inventory_service.py  overview_service.py  po_service.py  pricing_service.py  project_service.py  rate_limit.py  recommendation_service.py  rulemining_service.py  smartentry_service.py  submission_store.py  supplier_service.py  task_service.py  timing.py  utilization_service.py  why_processor.py
tests/: test_aito_client.py  test_anomaly_service.py  test_config.py  test_po_service.py  test_project_booktest.py  test_smartentry_service.py
(+46 files in other folders)
